# avr

./: LICENSE  README.md
attiny85/: README.md
attiny85/tiny_scope/: CMakeLists.txt  Makefile  README.md  avr-gcc.cmake
attiny85/tiny_scope/inc/: i2c.hpp  ssd1306.hpp
attiny85/tiny_scope/src/: i2c.cpp  main.cpp  ssd1306.cpp
